refactor: split runtime monoliths and harden compatibility