@@ -1,5 +1,6 @@
 package com.l.ausm.impl.pipeline.render;
 
+import com.l.ausm.impl.util.MinecraftReflectionCompat;
 import net.minecraft.client.renderer.texture.DynamicTexture;
 
 /**
@@ -17,20 +18,20 @@ public final class IrisLightmapTexture {
     private static final float CURVE_BLEND = 0.0F;
 
     private final DynamicTexture texture = new DynamicTexture(SIZE, SIZE);
-    private final int[] pixels = com.l.ausm.impl.util.MinecraftReflectionCompat.dynamicTextureData(texture);
+    private final int[] pixels = MinecraftReflectionCompat.dynamicTextureData(texture);
 
     public int updateFrom(DynamicTexture vanillaLightmap) {
         if (vanillaLightmap == null) {
             return -1;
         }
 
-        int[] source = com.l.ausm.impl.util.MinecraftReflectionCompat.dynamicTextureData(vanillaLightmap);
+        int[] source = MinecraftReflectionCompat.dynamicTextureData(vanillaLightmap);
         int count = Math.min(source.length, pixels.length);
         for (int i = 0; i < count; i++) {
             pixels[i] = adaptPixel(source[i]);
         }
-        com.l.ausm.impl.util.MinecraftReflectionCompat.invoke((texture), new String[] {"func_110564_a", "updateDynamicTexture"}, com.l.ausm.impl.util.MinecraftReflectionCompat.NO_PARAMETERS);;
-        return com.l.ausm.impl.util.MinecraftReflectionCompat.glTextureId(texture);
+        MinecraftReflectionCompat.invoke(texture, new String[]{"func_110564_a", "updateDynamicTexture"}, MinecraftReflectionCompat.NO_PARAMETERS);
+        return MinecraftReflectionCompat.glTextureId(texture);
     }
 
     private static int adaptPixel(int argb) {
@@ -45,6 +46,6 @@ public final class IrisLightmapTexture {
         float value = channel / 255.0F;
         float curved = (float) Math.pow(value, CURVE_EXPONENT);
         float adapted = value * (1.0F - CURVE_BLEND) + curved * CURVE_BLEND;
-        return Math.max(0, Math.min(255, Math.round(adapted * 255.0F)));
+        return Math.clamp(Math.round(adapted * 255.0F), 0, 255);
     }
 }
